# vector-ptycho

./: README.md  pyproject.toml
notebooks/: Adam optimiser demo.ipynb  Cosine_similarity.ipynb  Fluence_dependence_on_Cosin_similarity.ipynb  Fluence_dependence_on_Cosine_similarity.ipynb  Neel_vector_demo.ipynb  Resolution_test_structure.ipynb  XMD_ptycho_better_checkpointing.ipynb  XMD_ptycho_convert_to_l.ipynb  XMD_ptycho_convert_to_l_fixed_C.ipynb  XMD_ptycho_update_probe_and_object.ipynb  XMD_ptycho_update_probe_and_object_randomise.ipynb  XMLD_ptycho_Jone_matrix.ipynb  hyperparameter_tuning.ipynb  recon.pt  recon_STXM.pt  recon_STXM_metrics.txt  recon_post_STXM.pt  recon_post_probe.pt  recon_post_probe_2.pt  recon_post_probe_3.pt  recon_post_probe_4.pt  recon_post_probe_5.pt  recon_post_probe_6.pt  recon_post_probe_7.pt  theta_phi_meron_antimeron.npz
notebooks/03_05_2026_tests/: recon_post_probe.pt  recon_post_probe_4.pt
notebooks/Successfull fluence run 03_06_2025/: Fluence_dependence_on_Cosine_similarity.ipynb
notebooks/Successfull fluence run 03_06_2026 RndSeed 0/: Fluence_dependence_on_Cosine_similarity.ipynb
notebooks/Successfull fluence run 04_06_2026 RndSeed 5/: Fluence_dependence_on_Cosine_similarity.ipynb
notebooks/hyperparam_runs/: result_grad_0e+00_anis_0e+00.pkl  result_grad_0e+00_anis_1e-03.pkl  result_grad_0e+00_anis_1e-04.pkl  result_grad_1e+00_anis_1e+00.pkl  result_grad_1e+00_anis_1e-01.pkl  result_grad_1e-03_anis_0e+00.pkl  result_grad_1e-03_anis_1e-03.pkl  result_grad_1e-03_anis_1e-04.pkl  (+3 more)
scripts/: test_shift.py
(+10 files in other folders)
