[project]
name = "vector-ptycho"
version = "0.1.0"
description = "A Ptychographic reconstruction code for XMLD Neel vector mapping"
readme = "README.md"
authors = [
    { name = "Charlie Godfrey", email = "charliegodfrey13@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "datetime>=5.5",
    "ipykernel>=6.31.0",
    "ipympl>=0.10.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv]
link-mode = "copy"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
